Add lubridate to DESCRIPTION.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ RoxygenNote: 7.2.3
 Remotes: github::pbs-assess/pacea
 Imports:
     dplyr (>= 1.0.2),
+    lubridate
 Suggests:
     rmarkdown,
     knitr,
